logs/20260311_114542_test_tests.log
=== RUN: smart_microscope/test_tests.py ===
Timestamp: Wed 11 Mar 11:45:42 CDT 2026
PWD: /home/anita/pi_tests
Python: Python 3.11.2
Venv: /home/anita/pi_tests/.venv

--- SYSTEM BEFORE ---
 11:45:42 up  1:52,  2 users,  load average: 0.06, 0.20, 0.23
               total        used        free      shared  buff/cache   available
Mem:           3.7Gi       1.2Gi       1.8Gi        14Mi       836Mi       2.5Gi
Swap:          511Mi       501Mi        10Mi

--- RUNNING (/usr/bin/time -v gives peak RAM + CPU) ---
Total images found: 40
                                          image_path label  ... width height
0  /home/anita/pi_tests/smart_microscope/CytoLabe...     B  ...  1920   1080
1  /home/anita/pi_tests/smart_microscope/CytoLabe...     B  ...  1920   1080
2  /home/anita/pi_tests/smart_microscope/CytoLabe...     B  ...  1920   1080

[3 rows x 7 columns]
10X: 40 40X: 0
Test size: 8 Train size: 32
[INFO] Model Path: /home/anita/pi_tests/smart_microscope/models/best_model_Split_1.pt
Attempting to fetch cytofm model
Calling CytoFM (Adapter as nn.Module; engine loads backbone+ABMIL).
Traceback (most recent call last):
  File "/home/anita/pi_tests/smart_microscope/test_tests.py", line 58, in <module>
    results = test.test_model(
              ^^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/test_data.py", line 464, in test_model
    model = ML_models.call_model(model_name)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/ML_models.py", line 184, in call_model
    return get_CytoFM_Adapter()
           ^^^^^^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/ML_models.py", line 137, in get_CytoFM_Adapter
    return CytoFMAdapter()
           ^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/ML_models.py", line 102, in __init__
    from smart_microscope.cytofm.cytofm_infer import CytoFMABMILInference
  File "/home/anita/pi_tests/smart_microscope/cytofm/cytofm_infer.py", line 185
    ``
    ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
	Command being timed: "python smart_microscope/test_tests.py --model_name cytofm"
	User time (seconds): 9.76
	System time (seconds): 0.90
	Percent of CPU this job got: 104%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:10.24
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 374872
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 0
	Minor (reclaiming a frame) page faults: 80089
	Voluntary context switches: 17
	Involuntary context switches: 629
	Swaps: 0
	File system inputs: 0
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
